# wave

./: .gitignore  CMakeLists.txt  README.md
rpm/: wave.spec
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  bookmarkshistorymodel.cpp  bookmarkshistorymodel.h  browsermanager.cpp  browsermanager.h  dbmanager.cpp  dbmanager.h  iconimageprovider.cpp  iconimageprovider.h  sqlquerymodel.cpp  sqlquerymodel.h  tabsmodel.cpp  tabsmodel.h  urlobserver.h  useragent.cpp  wavesettings.kcfg  wavesettings.kcfgc  wavewebprofile.cpp  wavewebprofile.h
src/qml/: Bookmarks.qml  Downloads.qml  FindInPageBar.qml  History.qml  HistorySheet.qml  ListWebView.qml  Main.qml  Navigation.qml  NavigationEntrySheet.qml  Tabs.qml  TabsModel.qml  WebDeveloperTools.qml  WebView.qml
